# brokergate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: web-vercel.yml
docs/: README.md  broker-adapters-overview.md  landing-page-v1.md  longbridge-order-api.md  positioning.md  tiger-order-api.md
docs/designs/: brokergate-asset-dashboard.html
docs/guides/: longbridge-openapi-integration.md  tiger-openapi-integration.md
docs/specs/: 00-product-spec.md  01-architecture-spec.md  02-api-spec.md  03-broker-adapter-spec.md  04-order-confirmation-security-spec.md  05-data-model-audit-spec.md  06-deployment-operations-spec.md  07-mcp-ai-integration-spec.md  08-roadmap-validation-spec.md  09-unified-risk-engine-spec.md  10-multi-broker-target-architecture.md  11-broker-openapi-coverage.md  12-order-market-data-integration-design.md
scripts/: check_longbridge_connection.py  check_tiger_connection.py  test_user_api.py
src/brokergate/: __init__.py  config.py  main.py  models.py  risk.py  services.py  storage.py
src/brokergate/adapters/: __init__.py  (+4 more)
src/openbroker/: __init__.py  config.py  main.py  models.py  risk.py  services.py  storage.py
tests/: test_api.py  test_longbridge_adapter.py  test_tiger_adapter.py
web/: .env.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: dashboard.tsx  variant-command.tsx  variant-ledger.tsx  variant-mobile.tsx
web/lib/: brokergate-api.ts  dashboard-types.ts  format.ts
(+13 files in other folders)
