[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbroker"
version = "0.1.0"
description = "Self-hosted multi-broker trading gateway with human-confirmed order execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "longbridge>=4.2.2",
  "pydantic-settings>=2.6.0",
  "tigeropen>=3.5.8",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
